--- a/app/src/main/res/values-ldpi/dimens.xml
+++ b/app/src/main/res/values-ldpi/dimens.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="size_2dp">1.5px</dimen>
     <dimen name="size_3dp">2.25px</dimen>
     <dimen name="size_5dp">3.75px</dimen>
     <dimen name="size_7dp">5.25px</dimen>
@@ -17,6 +18,7 @@
     <dimen name="size_20dp">15px</dimen>
     <dimen name="size_25dp">18.75px</dimen>
     <dimen name="size_30dp">22.5px</dimen>
+    <dimen name="size_33dp">24.75px</dimen>
     <dimen name="size_35dp">26.25px</dimen>
     <dimen name="size_40dp">30px</dimen>
     <dimen name="size_45dp">33.75px</dimen>
