--- a/app/src/main/res/values-xxhdpi/dimens.xml
+++ b/app/src/main/res/values-xxhdpi/dimens.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="size_2dp">6px</dimen>
     <dimen name="size_3dp">9px</dimen>
     <dimen name="size_5dp">15px</dimen>
     <dimen name="size_7dp">21px</dimen>
@@ -17,6 +18,7 @@
     <dimen name="size_20dp">60px</dimen>
     <dimen name="size_25dp">75px</dimen>
     <dimen name="size_30dp">90px</dimen>
+    <dimen name="size_33dp">99px</dimen>
     <dimen name="size_35dp">105px</dimen>
     <dimen name="size_40dp">120px</dimen>
     <dimen name="size_45dp">135px</dimen>
