--- a/app/src/main/res/values-xxxhdpi/dimens.xml
+++ b/app/src/main/res/values-xxxhdpi/dimens.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="size_2dp">8px</dimen>
     <dimen name="size_3dp">12px</dimen>
     <dimen name="size_5dp">20px</dimen>
     <dimen name="size_7dp">28px</dimen>
@@ -17,6 +18,7 @@
     <dimen name="size_20dp">80px</dimen>
     <dimen name="size_25dp">100px</dimen>
     <dimen name="size_30dp">120px</dimen>
+    <dimen name="size_33dp">132px</dimen>
     <dimen name="size_35dp">140px</dimen>
     <dimen name="size_40dp">160px</dimen>
     <dimen name="size_45dp">180px</dimen>
